--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "chai-jwt": "^2.0.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
+    "mocha": "^4.0.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.0"
   }
